# webgen-eval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/01-saas-landing/: eval_final.json  output.html  prompt.txt
examples/02-todo-app/: eval_final.json  output.html  prompt.txt
examples/03-coffee-landing/: eval_final.json  output.html  prompt.txt
prompts/: generator.txt  judge.txt
src/webgen_eval/: __main__.py  evaluator.py  generator.py  refine.py
tests/: test_evaluator.py  test_generator.py  test_refine.py
