[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webgen-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
]

[project.scripts]
webgen-eval = "webgen_eval.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]
